# dev-cpp

./: .gitignore  CMakeLists.txt
impl/: CMakeLists.txt
impl/include/devcpp/log/: Journal.hpp  Sink.hpp  journal.hpp  journal_impl.hpp  sink.hpp
impl/include/devcpp/thread/: dummy_mutex.hpp  sync_value.hpp
impl/include/devcpp/types/: ClassTypes.hpp  class_types.hpp  common.hpp
impl/src/: CMakeLists.txt  main.cpp
impl/src/log/: Journal.cpp  journal.cpp  journal_impl.cpp
impl/test/: CMakeLists.txt  main.cpp
impl/test/mocks/: sink_mock.hpp
impl/test/unit/: journal_test.cpp
